# DeepClaw

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INTEGRATION.md  LICENSE  Makefile  README.md  jest.config.js  package-lock.json  package.json  requirements.txt  run.py  tsconfig.json
.github/: pull_request_template.md
brain/: README.md
dashboard/: .gitignore  README.md  RELEASE_NOTES.md  package.json  server.js
docs/: hub.html  index.html
engine/: Cargo.toml
engine/crates/websocket-bridge/: Cargo.toml
engine/crates/websocket-bridge/src/: lib.rs  main.rs
plugins/: README.md  __init__.py  notes.js  system-info.js  weather.js
src/: __init__.py  agent-system.ts  agent.py  alphabeta.py  alphabeta.ts  api-integrations.ts  browser.ts  chain-of-thought.ts  cli.py  cli.ts  code-parser.ts  code-sandbox.ts  config.py  config.ts  daemon.ts  email-receiver.ts  git-integration.ts  inbox.ts  index.ts  lib.ts  logger.py  logger.ts  longterm-memory.ts  main.py  memory.py  memory.ts  messaging.ts  multi-provider.ts  orchestrator.py  orchestrator.ts  platform_info.py  plugins.py  plugins.ts  prism-orchestrator.ts  prism.py  prism.ts  prism_orchestrator.py  privacy.ts  proactive.ts  provider.py  (+18 more)
tests/: agent-loop-real.test.ts  api-integrations.test.ts  browser.test.ts  chain-of-thought.test.ts  code-sandbox.test.ts  email-imap-real.test.ts  large-codebase.test.ts  llm-streaming-real.test.ts  messaging-real.test.ts  messaging.test.ts  orchestrator-upgrade.test.ts  orchestrator.test.ts  resilience-real.test.ts  scheduler.test.ts  skills.test.ts  (+4 more)
(+23 files in other folders)
