[package]
name = "websocket-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "websocket-bridge"
path = "src/main.rs"

[dependencies]
runtime = { path = "../runtime" }
api = { path = "../api" }
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
